Updated css for tables to avoid sideways scrollbar

--- a/docs/_static/css/style.css
+++ b/docs/_static/css/style.css
@@ -2,14 +2,10 @@
     color: black;
 }
 @media screen and (min-width: 767px) {
-
    .wy-table-responsive table td {
-      /* !important prevents the common CSS stylesheets from overriding
-         this as on RTD they are loaded after this stylesheet */
-      white-space: normal !important;
+      white-space: normal;
    }
-
    .wy-table-responsive {
-      overflow: visible !important;
+      overflow: visible;
    }
 }
